migliorato gestione login e game card + sistemato alcune api, da eliminare player section
